Updating workshop template

--- a/slides/slide_deck.html
+++ b/slides/slide_deck.html
@@ -496,7 +496,7 @@ Quinn Asena, Jack Williams, and Tony Ives
 <h1>Go here! <span class="emoji" data-emoji="point_down">👇</span></h1>
 <p>Link to repo: <a href="https://github.com/QuinnAsena/state-space-workhop-ESA">https://github.com/QuinnAsena/state-space-workhop-ESA</a></p>
 </section>
-<section id="fitting-process" class="slide level2 hidden unlisted" data-background-color="white">
+<section id="fitting-process" class="slide level2" data-background-color="white">
 <h2>Fitting process</h2>
 
 <img data-src="./images/flowchart1.png" class="r-stretch"><div class="quarto-auto-generated-content">
