Need link to feedback form!

--- a/slides/slide_deck.html
+++ b/slides/slide_deck.html
@@ -351,16 +351,10 @@ Quinn Asena, Jack Williams, and Tony Ives
 <section id="state-space-modelling" class="slide level2">
 <h2>State-space modelling</h2>
 <ul>
-<li><p>One of the primary goals of this model is to be able to test multiple hypotheses about the data and lend statistical support to the different hypotheses.</p>
-<ul>
-<li>which environmental drivers are having the strongst effects on which taxa?</li>
-<li>are interactions among taxa or abiotic variables driving change in the system?</li>
-<li>Fit models to address multiple working hypotheses (or hypothesis components)</li>
-</ul></li>
+<li><p>One of the primary goals of this model is to be able to test multiple hypotheses about the data and lend statistical support to the different hypotheses.</p></li>
 <li><p>This state-space approach allows us to estimate coefficients for taxa interactions and driver-taxa relationships, that we don’t get from methods such as ordination or cluster analysis.</p></li>
 <li><p>We recommend this method as complimentary to other methods, as both have their advantages.</p></li>
-<li><p>Work with uneven time-intervals between observations</p></li>
-<li><p>Woth with multinomially distributed data</p></li>
+<li><p>Work with uneven time-intervals between observations, and multinomially distributed data</p></li>
 </ul>
 
 <aside><div>
