added feedback form link

--- a/workshop_template.html
+++ b/workshop_template.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Quinn Asena, Jack Williams, and Tony Ives">
-<meta name="dcterms.date" content="2024-07-27">
+<meta name="dcterms.date" content="2024-08-05">
 
 <title>Workshop template</title>
 <style>
@@ -3166,7 +3166,7 @@ window.Quarto = {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">July 27, 2024</p>
+      <p class="date">August 5, 2024</p>
     </div>
   </div>
   
@@ -3748,7 +3748,7 @@ Feedback
 </div>
 </div>
 <div class="callout-body-container callout-body">
-<p>Before the final section, please fill out this feedback. This helps us a lot (makes our reporting and grand applications look good)! It will also help me refine future workshops.</p>
+<p>Before the final section, <a href="https://forms.gle/e3RGnZQqJUYfjYWL6">please fill out a quick one up (positive comment) one down (something we can do better next time) feedback</a>. This helps us a lot (makes reporting and grant applications look good)! It will also help me refine future workshops.</p>
 </div>
 </div>
 </section>
@@ -3836,7 +3836,7 @@ Answer, no peeking… <span class="emoji" data-emoji="grin">😁</span>
 <span id="cb47-10"><a href="#cb47-10" aria-hidden="true" tabindex="-1"></a>end_time <span class="ot">&lt;-</span> <span class="fu">Sys.time</span>()</span>
 <span id="cb47-11"><a href="#cb47-11" aria-hidden="true" tabindex="-1"></a>end_time <span class="sc">-</span> start_time</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 <div class="cell-output cell-output-stdout">
-<pre><code>Time difference of 2.074019 mins</code></pre>
+<pre><code>Time difference of 2.062097 mins</code></pre>
 </div>
 </div>
 </div>
@@ -3977,7 +3977,7 @@ Answer 4b
 <span id="cb54-8"><a href="#cb54-8" aria-hidden="true" tabindex="-1"></a>end_time <span class="ot">&lt;-</span> <span class="fu">Sys.time</span>()</span>
 <span id="cb54-9"><a href="#cb54-9" aria-hidden="true" tabindex="-1"></a>end_time <span class="sc">-</span> start_time</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 <div class="cell-output cell-output-stdout">
-<pre><code>Time difference of 13.39793 secs</code></pre>
+<pre><code>Time difference of 13.88489 secs</code></pre>
 </div>
 </div>
 </div>
@@ -4073,7 +4073,7 @@ Answer 4c
 <span id="cb57-11"><a href="#cb57-11" aria-hidden="true" tabindex="-1"></a>end_time <span class="ot">&lt;-</span> <span class="fu">Sys.time</span>()</span>
 <span id="cb57-12"><a href="#cb57-12" aria-hidden="true" tabindex="-1"></a>end_time <span class="sc">-</span> start_time</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 <div class="cell-output cell-output-stdout">
-<pre><code>Time difference of 1.622754 mins</code></pre>
+<pre><code>Time difference of 1.657994 mins</code></pre>
 </div>
 </div>
 </div>
